# messaging-app

./: .bzrignore  .gitignore  CMakeLists.txt  Jenkinsfile  README.md  TODO  TODO.convergence  clickable.json  clickable.yaml  config.h.in  manifest.json.in  messaging-app.apparmor  messaging-app.apparmor.profile  messaging-app.desktop  messaging-app.desktop.in  messaging-app.qmlproject  snapcraft.yaml
accounts/: messaging-app-im-irc.service  messaging-app.application
click/: CMakeLists.txt  manifest.json.in  messaging-app.apparmor  messaging-app.desktop  messaging-app.url-dispatcher
cmake/modules/: qt5.cmake
debian/: changelog  control  copyright  messaging-app-apparmor.additions  messaging-app-apparmor.manifest  messaging-app-autopilot.install  messaging-app-connected-autopilot.install  messaging-app.install  rules
po/: CMakeLists.txt  aa.po  aa.po~  am.po  ar.po  ar.po~  ast.po  ast.po~  az.po  az.po~  be.po  be.po~  bg.po  bn_BD.po  bn_BD.po~  br.po  br.po~  bs.po  bs.po~  ca.po  ca.po~  ca@valencia.po  ca@valencia.po~  cs.po  cs.po~  cy.po  cy.po~  da.po  da.po~  de.po  el.po  el.po~  en_AU.po  en_AU.po~  en_GB.po  en_GB.po~  en_US.po  eo.po  eo.po~  es.po  (+87 more)
setup/gui/: messaging-app.desktop
src/: CMakeLists.txt  MessagingApp.xml  audiorecorder.cpp  audiorecorder.h  com.canonical.MessagingApp.service.in  fileoperations.cpp  fileoperations.h  main.cpp  messaging-app-content.json  messaging-app.desktop.in  messaging-app.desktop.in.in  messaging-app.url-dispatcher  messagingappdbus.cpp  messagingappdbus.h  messagingapplication.cpp  messagingapplication.h  stickers-history-model.cpp  stickers-history-model.h  stickers-pack-model.cpp  stickers-pack-model.h
src/qml/: AccountSectionDelegate.qml  AddPhoneNumberToContactPage.qml  AttachmentPanel.qml  AttachmentsDelegate.qml  AudioPlaybackBar.qml  AudioRecordingBar.qml  CMakeLists.txt  ColoredImage.qml  ComposeBar.qml  ContactSearchList.qml  ContactSearchWidget.qml  ContentImport.qml  DeliveryStatus.qml  DraftTextArea.qml  EmptyState.qml  EmptyStatePage.qml  FavoriteChannels.qml  GroupChatInfoPage.qml  InputInfo.qml  KeyboardRectangle.qml  ListItemDemo.qml  LocalContactAvatar.qml  LocalPageWithBottomEdge.qml  LocalTextAreaStyle.qml  MMSBroadcastDialog.qml  MMSDelegate.qml  MMSImage.qml  MMSMessageBubble.qml  MainPage.qml  MessageAlertBubble.qml  MessageBubble.qml  MessageDateSection.qml  MessageDelegate.qml  MessageDelegateFactory.qml  MessageInfoDialog.qml  MessageSectionDelegate.qml  MessageStatusIcon.qml  Messages.qml  MessagesHeader.qml  MessagesListView.qml  (+34 more)
src/qml/AttachmentDelegates/: AnimatedImageDelegate.qml  AudioDelegate.qml  BaseDelegate.qml  CMakeLists.txt  ContactDelegate.qml  DefaultDelegate.qml  ImageDelegate.qml  Previewer.qml  PreviewerImage.qml  PreviewerMultipleContacts.qml  PreviewerSingleContact.qml  PreviewerVideo.qml  VideoDelegate.qml
src/qml/Dialogs/: CMakeLists.txt  EmptyGroupWarningDialog.qml  FileSizeWarningDialog.qml  InformationDialog.qml  MMSBroadcastDialog.qml  MMSEnableDialog.qml  NewGroupDialog.qml  NoDefaultSIMCardDialog.qml  NoMicrophonePermission.qml  NoNetworkDialog.qml  NoSIMCardSelectedDialog.qml  RemoveThreadDialog.qml  SetDefaultSIMCardDialog.qml  SimLockedDialog.qml
src/qml/MMS/: CMakeLists.txt  MMSAudio.qml  MMSBase.qml  MMSContact.qml  MMSDefault.qml  MMSImage.qml  MMSText.qml  MMSVideo.qml  Previewer.qml  PreviewerContact.qml  PreviewerImage.qml  PreviewerMultipleContacts.qml  PreviewerSingleContact.qml  PreviewerVideo.qml
src/qml/Stickers/: CMakeLists.txt  HistoryButton.qml  StickerDelegate.qml  StickerPackDelegate.qml  StickerPackModel.qml  StickerPacksModel.qml  StickersModel.qml  StickersPicker.qml
src/qml/assets/: black_bubble@27.sci  blue_bubble@27.sci  conversation_error@27.sci  conversation_incoming@18.sci  conversation_incoming@27.sci  conversation_outgoing@18.sci  conversation_outgoing@27.sci  conversation_pending@27.sci  green_bubble@27.sci  grey_bubble@27.sci  lightBlue_bubble@27.sci  lightGreen_bubble@27.sci  lightGrey_bubble@27.sci  lightRed_bubble@27.sci  media_bubble@27.sci  red_bubble@27.sci  white_bubble@27.sci
tests/: CMakeLists.txt
tests/autopilot/connected_tests/emulators/: communication_panel.py
tests/autopilot/connected_tests/tests/: __init__.py  test_communication_panel.py  test_messaging.py
tests/autopilot/messaging_app/: __init__.py  emulators.py  fixture_setup.py  helpers.py
tests/autopilot/messaging_app/emulators/: __init__.py  communication_panel.py  utils.py
tests/autopilot/messaging_app/testdata/: history.sqlite
tests/autopilot/messaging_app/tests/: __init__.py  test_communication_panel.py  test_messaging.py  test_ui.py
tests/autopilot/messaging_app_connected/: __init__.py
tests/autopilot/messaging_app_connected/emulators/: __init__.py  ofono.py
tests/autopilot/messaging_app_connected/tests/: __init__.py  test_messaging.py
tests/data/: CMakeLists.txt
tests/qml/: CMakeLists.txt  tst_AttachmentsDelegate.qml  tst_DualSim.qml  tst_MMSDelegate.qml  tst_MessageBubble.qml  tst_MessagesView.qml  tst_PreviewerImage.qml  tst_PreviewerImage.qml.disabled  tst_PreviewerVideo.qml  tst_PreviewerVideo.qml.disabled  tst_QmlTests  tst_QmlTests.cpp  tst_SingleSim.qml  tst_StickersHistoryModel.qml  tst_StickersPackModel.qml
